# acacia-bonsai

./: .gitignore  .gitmodules  CITATION.cff  LICENSE.aiger  Makefile  README  README.md  acacia.cpp  antichain.hpp  configure.sh  doc.md  meson.build  pseudocode.txt  rbtree.c  rbtree.h  self-benchmark.sh  tests
_archive/: Makefile
lib/: common_finput.cc  common_finput.hh  common_setup.hh  meson.build
src/: acacia-bonsai.cc  acacia-bonsai.cc.orig  acacia-bonsai.cc.save  acacia-bonsai.cc.save.1  actioners.hh  aiger.hh  antichains.hh  aut_preprocessors.hh  basic_antichain.cc  basic_antichain.hh  bdd_helper.hh  boolean_states.hh  bounded_states.hh  common_setup.cc  composition.hh  configuration.hh  downsets.hh  hoa.l  input_pickers.hh  ios_precomputers.hh  k-bounded_safety_aut.hh  k-bounded_safety_aut_2step.hh  k-bounded_safety_aut_2step_nosplit.hh  k-bounded_safety_aut_2step_nosplit_crit.hh  k-bounded_safety_aut_2step_nosplit_crit_incr.hh  k-bounded_safety_aut_work.hh  kdtree.c  kdtree.h  kdtree.hh  kdtree_tests.cpp  kdtree_vector.hh  lex.yy.c  meson.build  rbtree.c  rbtree.h  ref_ptr_cmp.hh  safe_states.hh  set_antichain_set.hh  set_antichain_vector.hh  set_kdtree.hh  (+18 more)
src/actioner/: actioner.hh  no_ios_precomputation.hh  standard.hh
src/actioners/: no_ios_precomputation.hh  standard.hh
src/antichains/: full_set.hh  kdtree_backed.hh  set_backed.hh  vector_backed.hh  vector_backed_one_dim_split.hh  vector_backed_one_dim_split_intersection_only.hh  vector_backed_sum_split.hh
src/aut_preprocessing/: aut_preprocessing.hh  no_preprocessing.hh  standard.hh  surely_losing.hh
src/aut_preprocessors/: no_preprocessing.hh  standard.hh  surely_losing.hh
src/boolean_states/: forward_saturation.hh  no_boolean_states.hh
src/bounded_states/: forward_saturation.hh  no_bounded_states.hh
src/composition/: composition.hh  composition_mt.hh  pipes.hh  types.hh
src/downsets/: full_set.hh  kdtree_backed.hh  set_backed.hh  vector_backed.hh  vector_backed_bin.hh  vector_backed_one_dim_split.hh  vector_backed_one_dim_split_intersection_only.hh  vector_or_kdtree_backed.hh
src/input_picker/: critical.hh  critical_multi_inputs.hh  input_picker.hh
src/input_pickers/: critical.hh  critical_fullrnd.hh  critical_multi_inputs.hh  critical_pq.hh  critical_rnd.hh
src/ios_precomputation/: delegate.hh  fake_vars.hh  ios_precomputation.hh  other.hh  powset.hh  standard.hh
src/ios_precomputers/: delegate.hh  fake_vars.hh  other.hh  powset.hh  standard.hh
src/safe_states/: bounded_states.hh  safe_states.hh  standard.hh
src/set/: antichain_set.hh  antichain_vector.hh  kdtree.hh  kdtree_set.hh  set.hh  standard.hh
src/utils/: bdd_helper.hh  cache.hh  kdtree.hh  kdtree.hh.orig  kdtree.hh.rej  lambda_ptr.hh  ref_ptr_cmp.hh  simd_traits.hh  static_switch.hh  todo.hh  transition_enumerator.hh  typeinfo.hh  vector_mm.hh  verbose.hh
src/vector/: simd.hh  simd_array.hh  simd_traits.hh  simd_vector.hh  standard.hh  vector.hh
src/vectors/: X_and_bitset.hh  array_backed.hh  array_backed_sum.hh  array_ptr_backed.hh  bitset_and_X.hh  simd_array_backed.hh  simd_array_backed_sum.hh  simd_array_ptr_backed.hh  simd_po_res.hh  simd_po_res_sum.hh  simd_vector_backed.hh  vector_backed.hh
subprojects/packagefiles/spot/: Makefile.am  meson.build
tests/: check-real-correct.sh  check-real-correct.sh.in  meson.build
tests-synth/: combine-aiger  meson.build  meyerphi-syfco  process  process-comp.sh  process-modelcheck.sh  process-synth.sh  smvtoaig  tester-comp.cc  tester-synth.cc  tester.cc  tester.cpp
tests-synth/tlsf/: collector_v1-5.tlsf  full_arbiter-2.tlsf  full_arbiter-3.tlsf  full_arbiter-4.tlsf  load_balancer-1.tlsf  ltl2dba_U11.tlsf  ltl2dba_U16.tlsf  narylatch-6.tlsf  prioritized_arbiter-3.tlsf
tests/SYNTCOMP-benchmarks21/: Alarm_9cac58d3.ltl  Alarm_a5f99bc6.part  AllHeating_d6376bf9.part  AllLights_06e9cad4.part  AllLights_63831f8c.ltl  AllLights_b209ff21.ltl  Assumptions_a50cadd7.part  CheckAlarmBroken1_1a2942e3.ltl  CheckAlarm_88f351a6.ltl  CheckCoffeMachine_3461125b.ltl  CheckDoor_c2b9e44d.part  CheckRoom_88c5c1c3.ltl  CheckShades_4d4ca5c4.ltl  CheckTime_3916ec59.ltl  CheckTime_3916ec59.part  CheckTime_4b5e6eaa.part  CheckTime_6479ef9a.ltl  CheckTimer_54e1f7d2.ltl  CheckTimer_fa8592c8.part  CheckWindows_54e1f7d2.part  Cockpitboard_efe2feaf.part  CoffeeMin_88f351a6.ltl  Coffee_235467da.ltl  Coffee_2c5b09da.ltl  Coffee_d6376bf9.ltl  Coffee_d6376bf9.part  Coffee_f1477cc5.ltl  Demo1_c2b9e44d.ltl  DeviceBehaviorChec_fa8592c8.ltl  DeviceBehaviorChec_fa8592c8.part  EscalatorCounting.ltl  EscalatorCounting.part  EscalatorNonCounting.ltl  FelixSpecFixed2_fa4d4ce3.ltl  FelixSpecFixed3_b0840146.ltl  FelixSpecFixed4GuaranteesOnly_88f351a6.ltl  FelixSpecFixed4GuaranteesOnly_88f351a6.part  FelixSpecFixed4_dd3a27e1.ltl  FelixSpecFixed5_f82794da.part  GamemodeChooser.part  (+290 more)
tests/acacia-plus/: HOWTO  README  acacia_plus.py  automaton.py  backward_algorithm.py  constants.py  forward_algorithm.py  library_linker.py  meson.build  qm.py  synthesis.py  tbucw.py  utils.py
tests/acacia-plus/lib/: antichain.c  antichain.h  backward_algorithm.c  backward_algorithm.h  bits.c  bits.h  cache.c  cache.h  counting_function.c  counting_function.h  forward_algorithm.c  forward_algorithm.h  hash_table.c  hash_table.h  linked_list.c  linked_list.h  memory_management.c  memory_management.h  meson.build  safety_game.c  safety_game.h  synthesis.c  synthesis.h  tbucw.c  tbucw.h  transition_system.c  transition_system.h  tuple.c  tuple.h  vector.c  vector.h
tests/antichains/: kdtree_tests.cc  meson.build  test_maker.hh  tests.cc
tests/demo-lily/: demo-v10.txt  demo-v12.txt  demo-v14.txt  demo-v18.txt  demo-v20.txt  demo-v22.txt  demo-v23.txt  demo-v24.txt  demo-v3.txt  demo-v5.txt  demo-v6.txt  demo-v9.txt
tests/downsets/: downset-bm.cc  kdtree_backed.cc  meson.build  simd-bm.cc  test_maker.hh  tests.cc
tests/ltl/demo-lily/: demo-v13.dot  demo-v13.txt  demo-v15.txt  demo-v16.txt  demo-v17.txt  demo-v19.txt  demo-v21.txt  demo-v7.txt  demo-v8.txt
tests/spot-bin/: ltl2tgba.cc  ltlsynt.cc  meson.build  reverse-ltlsynt.sh
(+2150 files in other folders)
