subdir ('spot-bin')
subdir ('acacia-plus')

test_files = {
               'realizable' :
                 { 'tiny' :  # Less than 50 bytes
 
                    [ 'ltl2dba23.ltl', 'lilydemo08.ltl', 'ltl2dba_U2_3.ltl',
                      'ltl2dba_U2_1.ltl', 'ltl2dba_E_1.ltl', 'ltl2dba_C2_1.ltl',
                      'ltl2dba24.ltl', 'ltl2dba22.ltl', 'ltl2dba_E_2.ltl',
                      'ltl2dba_R_1.ltl', 'ltl2dba_U2_2.ltl', 'ltl2dba01.ltl',
                      'detector_1.ltl', 'ltl2dba_C1_1.ltl', 'ltl2dba04.ltl',
                      'ltl2dba_U1_1.ltl', 'ltl2dba_S_1.ltl', 'ltl2dba_S_2.ltl',
                      'ltl2dba_U1_3.ltl', 'ltl2dba10.ltl', 'ltl2dba_beta_1.ltl',
                      'ltl2dba_U1_2.ltl', 'ltl2dba_Q_1.ltl', 'ltl2dba19.ltl' ],

                   'small' :  # More than 50 bytes, less than 100

                     [ 'ltl2dba_S_4.ltl', 'ltl2dba_C2_4.ltl', 'ltl2dba_S_5.ltl',
                       'ltl2dba12.ltl', 'ltl2dpa09.ltl', 'ltl2dpa02.ltl',
                       'ltl2dba03.ltl', 'lilydemo10.ltl', 'ltl2dba14.ltl',
                       'ltl2dpa15.ltl', 'ltl2dba_U2_7.ltl', 'ltl2dba_C1_4.ltl',
                       'detector_2.ltl', 'ltl2dba_C1_3.ltl', 'ltl2dba_U2_4.ltl',
                       'ltl2dba_E_3.ltl', 'detector_3.ltl', 'ltl2dba_C1_2.ltl',
                       'lilydemo23.ltl', 'lilydemo14.ltl', 'ltl2dba_U2_8.ltl',
                       'ltl2dpa05.ltl', 'detector_4.ltl', 'ltl2dpa11.ltl',
                       'lilydemo13.ltl', 'ltl2dba_alpha_2.ltl',
                       'ltl2dba_S_3.ltl', 'ltl2dba15.ltl', 'ltl2dba_U2_6.ltl',
                       'ltl2dba_E_5.ltl', 'shift_2.ltl', 'ltl2dpa04.ltl',
                       'ltl2dba_C2_3.ltl', 'ltl2dba16.ltl', 'ltl2dba26.ltl',
                       'ltl2dba02.ltl', 'ltl2dba_U1_7.ltl', 'ltl2dpa06.ltl',
                       'ltl2dba13.ltl', 'ltl2dpa16.ltl', 'ltl2dba_C2_2.ltl',
                       'ltl2dba09.ltl', 'ltl2dpa07.ltl', 'ltl2dba_U1_6.ltl',
                       'ltl2dpa08.ltl', 'ltl2dba_U1_4.ltl', 'ltl2dba18.ltl',
                       'ltl2dba21.ltl', 'ltl2dba_E_4.ltl', 'ltl2dba_U2_5.ltl',
                       'ltl2dba11.ltl', 'ltl2dba_Q_2.ltl', 'ltl2dba_Q_3.ltl',
                       'lilydemo12.ltl', 'ltl2dba_alpha_1.ltl',
                       'ltl2dba_U1_8.ltl', 'ltl2dba20.ltl', 'ltl2dba06.ltl',
                       'ltl2dba_beta_2.ltl', 'ltl2dba_U1_5.ltl',
                       'ltl2dba25.ltl', 'ltl2dba05.ltl' ],

                     '!large' : # Bigger than 100 bytes

                       [ 'TorcsSimple.ltl', 'SPIPureNext.ltl',
                         'collector_v3_7.ltl', 'ModdifiedLedMatrix5X.ltl',
                         'ltl2dpa12.ltl', 'KitchenTimerV3.ltl', 'Zoo5.ltl',
                         'lilydemo22.ltl', 'escalator_counting_init.ltl',
                         'collector_v3_5.ltl', 'lilydemo21.ltl',
                         'ltl2dpa21.ltl', 'ltl2dpa10.ltl', 'mux_6.ltl',
                         'ltl2dba_C1_5.ltl', 'SPI.ltl', 'MusicAppFeedback.ltl',
                         'simple_arbiter_enc_12.ltl', 'amba_case_study_3.ltl',
                         'generalized_buffer_2.ltl', 'Radarboard.ltl',
                         'escalator_bidirectional_init.ltl',
                         'KitchenTimerV2.ltl', 'full_arbiter_4.ltl',
                         'escalator_non-counting.ltl', 'ltl2dpa17.ltl',
                         'prioritized_arbiter_4.ltl', 'ltl2dba_E_8.ltl',
                         'ltl2dpa13.ltl', 'full_arbiter_enc_2.ltl',
                         'round_robin_arbiter_6.ltl', 'full_arbiter_enc_6.ltl',
                         'SPIWriteSdi.ltl', 'collector_v1_7.ltl',
                         'ltl2dba_C1_6.ltl', 'amba_decomposed_lock_10.ltl',
                         'torcs_gearing.ltl', 'ltl2dpa19.ltl',
                         'amba_decomposed_arbiter_2.ltl',
                         'amba_decomposed_encode_4.ltl',
                         'prioritized_arbiter_1.ltl', 'Zoo0.ltl',
                         'torcs_accelerating.ltl',
                         'load_balancer_unreal2_2.ltl', 'ltl2dba_C1_7.ltl',
                         'ltl2dba_alpha_12.ltl', 'KitchenTimerV5.ltl',
                         'KitchenTimerV10.ltl', 'music_app_feedback.ltl',
                         'Automata.ltl', 'lilydemo17.ltl', 'lilydemo07.ltl',
                         'ltl2dba_C2_6.ltl', 'round_robin_arbiter_10.ltl',
                         'TorcsAccelerating.ltl', 'generalized_buffer_3.ltl',
                         'full_arbiter_10.ltl', 'EscalatorCounting.ltl',
                         'simple_arbiter_enc_8.ltl', 'collector_v4_4.ltl',
                         'ltl2dba_Q_12.ltl', 'GamemodeChooser.ltl',
                         'collector_v2_7.ltl', 'lilydemo03.ltl',
                         'collector_v4_7.ltl', 'KitchenTimerV9.ltl',
                         'collector_v3_6.ltl', 'load_balancer_7.ltl',
                         'EscalatorBidirectional.ltl', 'slider_scored.ltl',
                         'KitchenTimerV7.ltl', 'amba_case_study_4.ltl',
                         'KitchenTimerV8.ltl', 'loadfull5.ltl',
                         'detector_10.ltl', 'slider_default.ltl',
                         'load_balancer_6.ltl', 'shift_4.ltl',
                         'simple_arbiter_3.ltl', 'ltl2dba_beta_12.ltl',
                         'full_arbiter_enc_4.ltl',
                         'TwoCountersRefinedRefined.ltl',
                         'EscalatorNonCounting.ltl', 'narylatch_4.ltl',
                         'mux_8.ltl', 'full_arbiter_3.ltl',
                         'amba_decomposed_encode_6.ltl', 'ltl2dba07.ltl',
                         'ltl2dba_Q_7.ltl', 'amba_decomposed_lock_8.ltl',
                         'ltl2dpa18.ltl', 'simple_arbiter_8.ltl',
                         'prioritized_arbiter_2.ltl', 'lilydemo06.ltl',
                         'ltl2dpa23.ltl', 'MusicAppMotivating.ltl',
                         'TorcsGearing.ltl', 'shift_8.ltl',
                         'torcs_steering_simple.ltl', 'zoo10.ltl',
                         'loadfull4.ltl', 'narylatch_8.ltl', 'lilydemo04.ltl',
                         'amba_decomposed_lock_4.ltl', 'ltl2dba_S_8.ltl',
                         'SliderDelayed.ltl', 'TwoCountersInRangeA6.ltl',
                         'ltl2dba_C1_8.ltl', 'EscalatorNonReactive.ltl',
                         'amba_decomposed_arbiter_6.ltl',
                         'EscalatorBidirectionalInit.ltl',
                         'generalized_buffer_4.ltl', 'ltl2dba_U1_12.ltl',
                         'SensorSubmodulChooser.ltl', 'ltl2dba_C2_12.ltl',
                         'button.ltl', 'prioritized_arbiter_enc_8.ltl',
                         'mux_10.ltl', 'SensorPart.ltl', 'detector_5.ltl',
                         'increment.ltl', 'prioritized_arbiter_enc_2.ltl',
                         'full_arbiter_enc_12.ltl', 'Button.ltl',
                         'lilydemo09.ltl', 'EnemeyModule.ltl', 'Gamelogic.ltl',
                         'loadfull3.ltl', 'ltl2dba_alpha_8.ltl',
                         'ltl2dba_alpha_10.ltl', 'full_arbiter_enc_8.ltl',
                         'collector_v2_6.ltl', 'amba_decomposed_encode_2.ltl',
                         'collector_v4_2.ltl', 'round_robin_arbiter_4.ltl',
                         'load_balancer_5.ltl', 'Scoreboard.ltl',
                         'amba_decomposed_encode_12.ltl', 'lilydemo18.ltl',
                         'loadcomp2.ltl', 'ltl2dba_S_10.ltl',
                         'SensorRegister.ltl', 'mux_2.ltl',
                         'TorcsSteeringSmart.ltl', 'load_balancer_8.ltl',
                         'amba_decomposed_lock_6.ltl', 'load_balancer_12.ltl',
                         'slider_delayed.ltl', 'ltl2dba_alpha_3.ltl',
                         'escalator_counting.ltl', 'prioritized_arbiter_5.ltl',
                         'ltl2dba_C2_8.ltl', 'collector_v3_4.ltl',
                         'OneCounter.ltl', 'collector_v2_5.ltl',
                         'loadcomp5.ltl', 'EscalatorCountingInit.ltl',
                         'ltl2dba_beta_8.ltl', 'ltl2dpa20.ltl',
                         'collector_v3_2.ltl', 'ltl2dba_U2_10.ltl', 'zoo5.ltl',
                         'simple_arbiter_4.ltl', 'ltl2dba_beta_10.ltl',
                         'collector_v1_5.ltl', 'detector_12.ltl',
                         'round_robin_arbiter_8.ltl', 'collector_v1_2.ltl',
                         'ltl2dba_U1_10.ltl', 'simple_arbiter_2.ltl',
                         'amba_case_study_2.ltl', 'ltl2dba_U2_12.ltl',
                         'EscalatorSmart.ltl', 'ltl2dpa24.ltl',
                         'amba_decomposed_tsingle.ltl', 'SPIReadClk.ltl',
                         'round_robin_arbiter_3.ltl', 'collector_v4_6.ltl',
                         'KitchenTimerV4.ltl', 'ltl2dba_S_12.ltl',
                         'collector_v3_3.ltl', 'generalized_buffer_6.ltl',
                         'OneCounterGuiA9.ltl', 'prioritized_arbiter_3.ltl',
                         'lilydemo20.ltl', 'load_balancer_10.ltl',
                         'amba_decomposed_arbiter_12.ltl', 'KitchenTimerV0.ltl',
                         'loadcomp3.ltl', 'SensorSelector.ltl',
                         'prioritized_arbiter_enc_4.ltl', 'full_arbiter_7.ltl',
                         'ltl2dba_alpha_5.ltl', 'torcs_steering_improved.ltl',
                         'amba_decomposed_decode.ltl', 'ltl2dba_alpha_7.ltl',
                         'Automata32S.ltl', 'simple_arbiter_7.ltl',
                         'ltl2dba_C2_7.ltl', 'collector_v2_2.ltl',
                         'narylatch_10.ltl', 'collector_v4_5.ltl',
                         'SPIWriteManag.ltl', 'ltl2dba_beta_7.ltl',
                         'LedMatrix.ltl', 'generalized_buffer_5.ltl',
                         'SliderDefault.ltl', 'Automata16S.ltl',
                         'load_balancer_3.ltl', 'ltl2dba_C1_12.ltl',
                         'detector_6.ltl', 'prioritized_arbiter_6.ltl',
                         'simple_arbiter_6.ltl', 'shift_10.ltl',
                         'ltl2dba_beta_4.ltl', 'ltl2dba_Q_5.ltl', 'shift_6.ltl',
                         'ltl2dba_beta_3.ltl', 'MusicAppSimple.ltl',
                         'collector_v1_4.ltl', 'genbuf2.ltl',
                         'KitchenTimerV1.ltl', 'ltl2dba_beta_6.ltl',
                         'full_arbiter_2.ltl', 'ltl2dba_C1_10.ltl',
                         'detector_7.ltl', 'simple_arbiter_enc_10.ltl',
                         'amba_decomposed_tincr.ltl',
                         'prioritized_arbiter_enc_12.ltl', 'KitchenTimerV6.ltl',
                         'shift_12.ltl', 'TwoCounters4.ltl',
                         'amba_decomposed_lock_2.ltl', 'narylatch_12.ltl',
                         'ltl2dba_alpha_4.ltl', 'full_arbiter_8.ltl',
                         'RegManager.ltl', 'Increment.ltl',
                         'music_app_motivating.ltl', 'collector_v2_4.ltl',
                         'Sensor.ltl', 'escalator_bidirectional.ltl',
                         'amba_decomposed_arbiter_10.ltl',
                         'amba_decomposed_arbiter_8.ltl', 'ltl2dba_Q_10.ltl',
                         'simple_arbiter_enc_6.ltl', 'torcs_steering_smart.ltl',
                         'prioritized_arbiter_enc_6.ltl', 'SliderScored.ltl',
                         'Zoo10.ltl', 'ltl2dpa22.ltl',
                         'UnderapproxStrengthenedDemo.ltl',
                         'amba_decomposed_shift.ltl',
                         'music_app_motivating_2.ltl',
                         'simple_arbiter_enc_2.ltl', 'ltl2dba_S_7.ltl',
                         'mux_12.ltl', 'ltl2dba_C2_5.ltl', 'torcs_simple.ltl',
                         'amba_decomposed_arbiter_4.ltl', 'detector_8.ltl',
                         'amba_decomposed_arbiter_7.ltl', 'ltl2dba_beta_5.ltl',
                         'ltl2dba_E_10.ltl', 'zoo0.ltl', 'lilydemo19.ltl',
                         'ltl2dba_Q_4.ltl', 'ltl2dba_C2_10.ltl',
                         'collector_v4_3.ltl', 'prioritized_arbiter_12.ltl',
                         'amba_decomposed_encode_10.ltl',
                         'amba_decomposed_arbiter_5.ltl', 'collector_v1_6.ltl',
                         'round_robin_arbiter_5.ltl', 'full_arbiter_5.ltl',
                         'simple_arbiter_12.ltl',
                         'amba_decomposed_arbiter_3.ltl', 'SPIReadManag.ltl',
                         'ltl2dba_E_7.ltl', 'escalator_non-reactive.ltl',
                         'genbuf3.ltl', 'simple_arbiter_10.ltl',
                         'TorcsSteeringSimple.ltl', 'escalator_smart.ltl',
                         'ltl2dba_S_6.ltl', 'ltl2dpa03.ltl',
                         'round_robin_arbiter_2.ltl', 'collector_v2_3.ltl',
                         'lilydemo05.ltl', 'RotationCalculator.ltl',
                         'ltl2dpa14.ltl', 'TorcsSteeringImproved.ltl',
                         'loadcomp4.ltl', 'genbuf4.ltl', 'genbuf5.ltl',
                         'simple_arbiter_5.ltl', 'ActionConverter.ltl',
                         'ltl2dba_E_6.ltl', 'amba_decomposed_tburst4.ltl',
                         'full_arbiter_12.ltl', 'narylatch_6.ltl',
                         'round_robin_arbiter_7.ltl', 'load_balancer_4.ltl',
                         'prioritized_arbiter_8.ltl', 'ltl2dba_Q_8.ltl',
                         'full_arbiter_enc_10.ltl', 'prioritized_arbiter_7.ltl',
                         'SPIReadSdi.ltl', 'amba_decomposed_lock_12.ltl',
                         'Cockpitboard.ltl', 'narylatch_2.ltl',
                         'TwoCounters3.ltl', 'simple_arbiter_enc_4.ltl',
                         'collector_v1_3.ltl', 'lilydemo24.ltl',
                         'Gamemodule.ltl', 'SensorInit.ltl',
                         'amba_decomposed_encode_8.ltl', 'ltl2dba_Q_6.ltl',
                         'load_balancer_2.ltl', 'prioritized_arbiter_10.ltl',
                         'music_app_simple.ltl', 'ltl2dba_E_12.ltl',
                         'tictactoe.ltl', 'loadfull2.ltl',
                         'prioritized_arbiter_enc_10.ltl',
                         'round_robin_arbiter_12.ltl', 'mux_4.ltl',
                         'SPIWriteClk.ltl', 'ltl2dpa01.ltl',
                         'full_arbiter_6.ltl', 'ltl2dba_alpha_6.ltl',
                         'OneCounterInRangeA3.ltl' ]
                       
                 },
               'unrealizable' :
                 { 'tiny' : # Smaller than 100 bytes

                     [ 'ltl2dba_psi_1.ltl', 'ltl2dba_psi_2.ltl',
                       'ltl2dba_R_2.ltl', 'ltl2dba27.ltl',
                       'ltl2dba_theta_1.ltl', 'ltl2dba_theta_2.ltl',
                       'ltl2dba_psi_4.ltl', 'UnderapproxDemo.ltl',
                       'ltl2dba_psi_3.ltl', 'lilydemo11.ltl'],

                   'small' : # Bigger than 100 bytes, smaller than 200 bytes

                     [ 'ltl2dba_psi_8.ltl', 'ltl2dba_psi_5.ltl',
                       'ltl2dba_theta_3.ltl', 'ltl2dba_theta_8.ltl',
                       'ltl2dba_theta_7.ltl', 'ltl2dba_psi_6.ltl',
                       'lilydemo01.ltl', 'ltl2dba_R_4.ltl',
                       'simple_arbiter_unreal2_2.ltl', 'ltl2dba_theta_6.ltl',
                       'ltl2dba_R_3.ltl', 'ltl2dba_psi_7.ltl', 'lilydemo15.ltl',
                       'ltl2dba_R_5.ltl', 'ltl2dba_theta_4.ltl',
                       'lilydemo02.ltl', 'ltl2dba_theta_5.ltl',
                       'detector_unreal_2.ltl', 'UnderapproxDemo2.ltl' ],

                   '!large' : # Bigger than 200 bytes

                     [ 'load_balancer_unreal1_4_1.ltl',
                       'TwoCountersInRangeA4.ltl', 'detector_unreal_4.ltl',
                       'prioritized_arbiter_unreal1_3_6.ltl',
                       'full_arbiter_unreal1_3_5.ltl',
                       'full_arbiter_unreal1_3_6.ltl',
                       'full_arbiter_unreal2_5.ltl', 'TwoCountersInRange.ltl',
                       'detector_unreal_12.ltl',
                       'round_robin_arbiter_unreal1_2_12.ltl',
                       'full_arbiter_unreal1_2_3.ltl',
                       'simple_arbiter_unreal2_3.ltl',
                       'simple_arbiter_unreal1_4_2.ltl',
                       'TwoCountersDisButA0.ltl', 'TwoCountersInRangeM3.ltl',
                       'OneCounterInRange.ltl',
                       'round_robin_arbiter_unreal1_2_3.ltl',
                       'ltl2dba_theta_10.ltl', 'ltl2dba_psi_12.ltl',
                       'full_arbiter_unreal1_2_9.ltl', 'TwoCounters5.ltl',
                       'lilydemo16.ltl', 'full_arbiter_unreal1_3_12.ltl',
                       'full_arbiter_unreal1_3_10.ltl',
                       'TwoCountersDisButA3.ltl', 'detector_unreal_8.ltl',
                       'load_balancer_unreal1_2_4.ltl',
                       'TwoCountersInRangeM5.ltl', 'TwoCountersDisButA4.ltl',
                       'load_balancer_unreal1_4_6.ltl',
                       'prioritized_arbiter_unreal2_2.ltl',
                       'simple_arbiter_unreal1_4_6.ltl', 'OneCounterGui.ltl',
                       'OneCounterGuiA1.ltl',
                       'generalized_buffer_unreal2_2.ltl',
                       'simple_arbiter_unreal1_4_3.ltl',
                       'load_balancer_unreal1_4_5.ltl',
                       'round_robin_arbiter_unreal2_4.ltl', 'ltl2dba_R_6.ltl',
                       'ltl2dba_R_8.ltl', 'load_balancer_unreal1_2_10.ltl',
                       'full_arbiter_unreal1_2_15.ltl',
                       'TwoCountersInRangeA5.ltl',
                       'generalized_buffer_unreal1_2_2.ltl',
                       'OneCounterGuiA3.ltl', 'TwoCountersInRangeM4.ltl',
                       'prioritized_arbiter_unreal2_4.ltl',
                       'load_balancer_unreal1_4_2.ltl',
                       'full_arbiter_unreal1_2_6.ltl',
                       'round_robin_arbiter_unreal1_2_18.ltl',
                       'prioritized_arbiter_unreal2_3.ltl',
                       'TwoCountersInRangeM0.ltl',
                       'load_balancer_unreal1_4_4.ltl',
                       'TwoCountersInRangeA3.ltl', 'OneCounterGuiA2.ltl',
                       'TwoCountersInRangeM1.ltl',
                       'round_robin_arbiter_unreal1_2_6.ltl',
                       'round_robin_arbiter_unreal2_3.ltl',
                       'OneCounterGuiA0.ltl', 'TwoCountersDisButA2.ltl',
                       'TwoCountersDisButA7.ltl', 'load_balancer_unreal2_3.ltl',
                       'full_arbiter_unreal2_2.ltl', 'detector_unreal_10.ltl',
                       'full_arbiter_unreal2_3.ltl', 'ltl2dba_R_10.ltl',
                       'ltl2dba_R_7.ltl', 'load_balancer_unreal1_2_2.ltl',
                       'TwoCounters.ltl', 'TwoCountersGui.ltl',
                       'load_balancer_unreal1_2_6.ltl',
                       'full_arbiter_unreal1_3_2.ltl',
                       'load_balancer_unreal1_2_8.ltl',
                       'TwoCountersInRangeA1.ltl',
                       'full_arbiter_unreal1_3_8.ltl',
                       'simple_arbiter_unreal2_6.ltl', 'ltl2dpa25.ltl',
                       'TwoCountersDisButAC.ltl', 'load_balancer_unreal2_5.ltl',
                       'TwoCountersInRangeA0.ltl',
                       'full_arbiter_unreal1_3_1.ltl',
                       'simple_arbiter_unreal1_4_5.ltl',
                       'round_robin_arbiter_unreal2_2.ltl',
                       'TwoCountersDisButA8.ltl',
                       'load_balancer_unreal1_4_3.ltl',
                       'OneCounterInRangeA1.ltl', 'detector_unreal_6.ltl',
                       'OneCounterGuiA5.ltl', 'simple_arbiter_unreal1_4_4.ltl',
                       'load_balancer_unreal2_4.ltl',
                       'full_arbiter_unreal1_3_3.ltl', 'OneCounterGuiA8.ltl',
                       'OneCounterInRangeA2.ltl', 'TwoCountersInRangeA2.ltl',
                       'TwoCountersInRangeM2.ltl',
                       'amba_case_study_unreal1_2_2.ltl', 'OneCounterGuiA7.ltl',
                       'full_arbiter_unreal1_3_4.ltl',
                       'full_arbiter_unreal1_2_18.ltl',
                       'prioritized_arbiter_unreal1_3_10.ltl',
                       'simple_arbiter_unreal1_4_1.ltl', 'ltl2dba_R_12.ltl',
                       'TwoCountersDisButA9.ltl', 'full_arbiter_unreal2_4.ltl',
                       'prioritized_arbiter_unreal2_5.ltl',
                       'ltl2dba_theta_12.ltl', 'TwoCountersRefined.ltl',
                       'full_arbiter_unreal1_2_12.ltl',
                       'OneCounterInRangeA0.ltl',
                       'amba_case_study_unreal2_2.ltl',
                       'TwoCountersDisButA5.ltl',
                       'prioritized_arbiter_unreal1_3_4.ltl',
                       'prioritized_arbiter_unreal1_3_8.ltl',
                       'simple_arbiter_unreal2_5.ltl',
                       'round_robin_arbiter_unreal2_5.ltl',
                       'TwoCountersDisButA6.ltl',
                       'round_robin_arbiter_unreal1_2_15.ltl',
                       'TwoCountersDisButA1.ltl', 'ltl2dba_psi_10.ltl',
                       'OneCounterGuiA6.ltl',
                       'prioritized_arbiter_unreal1_3_2.ltl',
                       'ModdifiedLedMatrix4X.ltl', 'genbuf6.ltl',
                       'TwoCounters2.ltl',
                       'round_robin_arbiter_unreal1_2_9.ltl',
                       'load_balancer_unreal1_2_12.ltl', 'OneCounterGuiA4.ltl',
                       'simple_arbiter_unreal2_4.ltl' ]
                 }
             }

conf_data = configuration_data ()
conf_data.set_quoted ('LTLSYNT', ltlsynt_exe.full_path ())
conf_data.set_quoted ('ACABONSAI', ab_exe.full_path ())
conf_data.set_quoted ('ACAPLUS', meson.source_root() / '@0@'.format(acacia_plus_py[0]))
conf_data.set_quoted ('PYTHON3', py.path ())
conf_data.set_quoted ('ACACIA_PLUS_LIB', acplus_lib.full_path ())
conf_data.set_quoted ('LTL2TGBA_BIN', ltl2tgba_exe.full_path ())

check_real_file = configure_file (input : 'check-real-correct.sh.in',
                                  output : 'check-real-correct.sh',
                                  configuration : conf_data)
check_real_exe = find_program (check_real_file)

# test_files = { 'realizable' : { 'tiny' :  [] } } ...

foreach folder, testset : test_files
  foreach size, files : testset
    if not size.startswith ('!')  # Skip sizes starting with !, typically !large
      foreach file : files
        filename = 'ltl' / folder / file
        test (file,
              check_real_exe,
              args : [ '-p',
                       '-a',
                       '-F', files (filename) ],
              suite : [ size, folder + '/' + size, folder ],
              timeout: 30)
      endforeach
    endif
  endforeach
endforeach

benchmark_files = [  # Sorted from faster to slower
                    'unrealizable/ltl2dba_psi_7.ltl',
                    'realizable/ltl2dba_U2_6.ltl',
                    'unrealizable/ltl2dba_theta_5.ltl',
                    'unrealizable/ltl2dba_psi_8.ltl',
                    'realizable/ltl2dba_U1_5.ltl',
                    'realizable/ltl2dba02.ltl',
                    'unrealizable/ltl2dba_theta_6.ltl',
                    'realizable/ltl2dba_U2_7.ltl',
                    'unrealizable/ltl2dba_theta_7.ltl',
                    'realizable/ltl2dba_U2_8.ltl',
                  ]

foreach file : benchmark_files
  filename = 'ltl' / file
  benchmark (file,
             check_real_exe,
             args : [ '-p',  ## prefix every line with the name of the test
                      '-a',  ## use acacia-bonsai.  -+: acaplus, -l: ltlsync
                      '-F', files (filename) ],
             timeout: 30)
endforeach
